<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karlaterrazas.mypet.PetActivity">


<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
    tools:ignore="NestedScrolling,ScrollViewSize,UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_weight="1"
            tools:ignore="InefficientWeight" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_label_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_nom"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                android:textColorHint="@android:color/white"
                tools:ignore="TextFields" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tv_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_sexo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/group"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rb_hembra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb_hembra"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium" />

            <RadioButton
                android:id="@+id/rb_macho"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_macho"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        </RadioGroup>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/float_label_fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_fecha"
                android:inputType="date"
                android:maxLength="10"
                android:maxLines="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                android:textColorHint="@android:color/white"
                tools:ignore="TextFields" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_registro"
            style="@android:style/Widget.Holo.Light.Button.Toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_registro"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>
</ScrollView>
</ScrollView>