<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karlaterrazas.mypet.Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="NestedScrolling,ObsoleteLayoutParam,UselessParent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_weight="1"
                tools:ignore="InefficientWeight" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_nombre"
                    android:inputType="textPersonName"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_apellido_p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_apellido_p"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_apellido_p"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_apellido_m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_apellido_m"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_apellido_m"
                    android:inputType="textPersonName"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_correo_e"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_correo_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_correo_e"
                    android:inputType="textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_contraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_contraseña"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_contraseña"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_registrar"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:onClick="registrar"
                android:text="@string/btn_registrar"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="InefficientWeight" />
        </LinearLayout>
    </ScrollView>
</ScrollView>