<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karlaterrazas.mypet.PasswordActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="NestedScrolling,ScrollViewSize,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_ingresa1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_ingresa1"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_nueva"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_nueva"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_nueva"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_confirma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_confirma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_confirma"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_aceptar"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_aceptar" />

        </LinearLayout>


    </ScrollView>

</ScrollView>