<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context="com.example.karlaterrazas.mypet.StartActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:contentDescription="@string/iv_logo"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize,UselessParent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="350dp"
            android:layout_height="340dp"
            android:layout_gravity="center"
            android:background="@drawable/mypet"
            android:padding="70dp"
            android:scaleType="center"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_registrarse"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/btn_registrarse"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <Button
                android:id="@+id/btn_iniciar_sesion"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:text="@string/btn_incio_sesion"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
