<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karlaterrazas.mypet.CheckActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="NestedScrolling,ScrollViewSize,UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/tv_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_text1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_codigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_codigo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_codigo"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_enviar1"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_enviar1" />
        </LinearLayout>
    </ScrollView>
</ScrollView>