<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<ScrollView-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:orientation="vertical"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context="com.example.karlaterrazas.mypet.LoginActivity">-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical"-->
        <!--tools:ignore="UselessParent">-->

        <!--<Space-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="10dp" />-->

        <!--<TextView-->
            <!--android:id="@+id/tv_log_in"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/tv_log_in"-->
            <!--android:textAlignment="center"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Headline" />-->

        <!--<EditText-->
            <!--android:id="@+id/et_correo_electronico"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/et_correo_electronico"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"-->
            <!--tools:ignore="LabelFor" />-->

        <!--<EditText-->
            <!--android:id="@+id/et_password"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/et_password"-->
            <!--android:inputType="textPassword"-->
            <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"-->
            <!--tools:ignore="LabelFor" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:orientation="vertical"-->
            <!--android:weightSum="1">-->

            <!--<Button-->
                <!--android:id="@+id/btn_olvidaste"-->
                <!--style="@android:style/Widget.Holo.Light.Button.Toggle"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.05"-->
                <!--android:text="@string/btn_olvidaste" />-->

            <!--<Button-->
                <!--android:id="@+id/btn_iniciar_s"-->
                <!--style="@android:style/Widget.Holo.Light.Button"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.05"-->
                <!--android:text="@string/btn_inicar_s"-->
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Button" />-->

        <!--</LinearLayout>-->
    <!--</LinearLayout>-->


<!--</ScrollView>-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.karlaterrazas.mypet.LoginActivity"
    android:weightSum="1">
    <!-- Login progress -->


    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        app:srcCompat="@drawable/mypet"
        tools:ignore="ContentDescription"
        android:layout_weight="0.74" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:layout_gravity="center"
        android:layout_weight="0.18">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="text|textEmailAddress"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white"
                    tools:ignore="TextFields" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/float_label_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium.Inverse"
                    android:textColorHint="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="ingresar"
                android:text="@string/action_sign_in" />

            <Button
                android:id="@+id/btn_olvidaste"
                style="@android:style/Widget.Holo.Light.Button.Toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="registro"
                android:text="@string/btn_registrarse" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>